z-index fixed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header{
     background-color: white;
     width: 100%;
     height: 80px;
+    z-index: 1;
 }
 
 .container{
